--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "app.js",
   "scripts": {
     "build": "npm run build",
-    "start":"node app.js",
-    "dev":"nodemon app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.3.1",
     "nodemon": "^2.0.22",
